Avoid crash for deep aliases

Aliases are seriously broken and need a larger overhaul.
This patch at least prevents the application from crashing.

Task-number: QTBUG-89822
Fixes: QTBUG-94820
Change-Id: Ib6acc5b6f621a902f7f5ce370043986486f3c0d0
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 30136b1a82bfc54459741483e76f2f70c937dedd)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>