src/qml/qml/qqmlpropertycachecreator_p.h
@@ -865,6 +865,10 @@ inline QQmlError QQmlPropertyCacheAliasCreator<ObjectContainer>::propertyDataFor
             Q_ASSERT(targetCache);
             targetProperty = targetCache->property(valueTypeIndex);
 
+            if (targetProperty == nullptr) {
+                return qQmlCompileError(alias.referenceLocation,
+                                        QQmlPropertyCacheCreatorBase::tr("Invalid alias target"));
+            }
 
             *type = targetProperty->propType();
             writable = targetProperty->isWritable();
