tests/auto/qml/qqmllanguage/data/qtbug_89822.qml
@@ -1,0 +1,8 @@
+import QtQml 2.0
+
+QtObject {
+    id: root
+    readonly property QtObject test: QtObject { property int subproperty: 3}
+    readonly property alias testAlias: root.test.subproperty
+}
+
